# ProxMaP-Navigation

./: .gitmodules  README.md
ProxMaP_ROS/proxmap_ros/: CMakeLists.txt  package.xml
ProxMaP_ROS/proxmap_ros/launch/: adaptive_speed.launch  goal_pub.launch  main.launch
ProxMaP_ROS/proxmap_ros/scripts/: goal_pub.py  laser_to_image.py  map_predictor.py  obscost_update.py  polygon_update.py  pred_costmap.py
ProxMaP_ROS/proxmap_ros/scripts/models/: __init__.py
navigation/turtlebot_navigation/launch/: gmapping_demo.launch  mapping.launch
navigation/turtlebot_navigation/launch/includes/: move_base.launch.xml
navigation/turtlebot_navigation/launch/includes/gmapping/: gmapping.launch.xml
navigation/turtlebot_navigation/param/: costmap_common_params.yaml  costmap_common_params2.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
navigation/turtlebot_navigation/src/: test.py  test2.py
results/simulation_test_world2/: time_to_reach_goals_with_map_pred_nospeed_update.csv  time_to_reach_goals_with_map_pred_speed_update.csv  time_to_reach_goals_without_map_pred.csv
scripts/: laser_to_image.py  map_polygon.py  map_predictor.py  pred_costmap.py
scripts/models/: unet_model.py
turtlebot2_simulation/kobuki/kobuki_description/urdf/: kobuki_gazebo.urdf.xacro
turtlebot2_simulation/turtlebot_description/urdf/: turtlebot_gazebo.urdf.xacro
turtlebot2_simulation/turtlebot_description/urdf/stacks/: hexagons.urdf.xacro
turtlebot2_simulation/turtlebot_gazebo/launch/: amcl_demo.launch  gmapping_demo.launch  turtlebot_world.launch
turtlebot2_simulation/turtlebot_gazebo/launch/includes/: kobuki.launch.xml
turtlebot2_simulation/turtlebot_gazebo/maps/: empty_map.pgm  empty_map.yaml
turtlebot2_simulation/turtlebot_gazebo/worlds/: world1.world  world2.world  world5.world  world6.world
virtual_layer/custom_msgs_demo/: CMakeLists.txt
virtual_layer/virtual_costmap_layer/cfg/: VirtualLayer.cfg
virtual_layer/virtual_costmap_layer/include/virtual_costmap_layer/: virtual_layer.h
virtual_layer/virtual_costmap_layer/src/: virtual_layer.cpp
visualizer/turtlebot_rviz_launchers/rviz/: navigation.rviz
