<?xml version="1.0"?>
<package format="2">
    <name>proxmap_ros</name>
    <version>0.0.0</version>
    <description>The proxmap_ros package</description>
    <maintainer email="pbhujbal@umd.edu">pratik</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <exec_depend>rospy</exec_depend>
    <build_depend>sensor_msgs</build_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <build_depend>geometry_msgs</build_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <build_depend>nav_msgs</build_depend>
    <exec_depend>nav_msgs</exec_depend>
    <build_depend>tf2_ros</build_depend>
    <exec_depend>tf2_ros</exec_depend>
    <build_depend>tf2_geometry_msgs</build_depend>
    <exec_depend>tf2_geometry_msgs</exec_depend>
    <build_depend>roslib</build_depend>
    <exec_depend>roslib</exec_depend>
    <build_depend>vision_opencv</build_depend>
    <exec_depend>vision_opencv</exec_depend>

    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>

    <test_depend>rostest</test_depend>
    <test_depend>rosunit</test_depend>
    <test_depend>rospy</test_depend>
    <test_depend>roslib</test_depend>
</package>